CU-22wwd1u[in-progress] fixed parargaph spread

--- a/parts/page_header/page_header.module.scss
+++ b/parts/page_header/page_header.module.scss
@@ -53,3 +53,15 @@
 		transform: translateX(-50%);
 	}
 }
+
+@media(min-width: 70em) {
+	.title {
+		@include mixins.display_text('m');
+	}
+}
+
+@media(min-width: 80em) {
+	.title {
+		@include mixins.display_text('l');
+	}
+}
